--- a/HW_200/css/style.css
+++ b/HW_200/css/style.css
@@ -83,7 +83,7 @@
 }
 
 .top {
-  background-image: url("/img/main.png");
+  background-image: url("../img/main.png");
   background-size: cover;
   height: 758px;
   border-radius: 50px;
@@ -300,6 +300,10 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  width: 358px;
+}
+.articleN__backgroundArticle {
+  background-color: #F4F0EC;
 }
 .articleN__text {
   color: #292F36;
@@ -339,7 +343,7 @@
   text-transform: capitalize;
   position: absolute;
   top: 275px;
-  left: 65px;
+  left: 50px;
   background-color: white;
   border-radius: 8px 8px 8px 0px;
   background: #FFF;
@@ -369,6 +373,8 @@
 .articles {
   display: flex;
   margin-top: 52px;
+  flex-wrap: wrap;
+  width: 1200px;
 }
 
 .footer {
@@ -409,4 +415,83 @@
   font-weight: 400;
   line-height: 125%;
   /* 31.25px */
+}
+
+.blog__top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  background-image: url("../img/BlogImg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 356px;
+}
+.blog__topTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 503px;
+  padding: 41px 78px;
+  border-radius: 37px 37px 0px 0px;
+  background: #FFF;
+}
+
+.latestPost {
+  margin-top: 200px;
+  width: 1200px;
+}
+.latestPost__date {
+  color: #4D5053;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  /* 24px */
+  letter-spacing: 0.16px;
+  text-transform: capitalize;
+}
+.latestPost__center {
+  display: flex;
+  justify-content: center;
+}
+.latestPost__body {
+  margin-top: 27px;
+  display: flex;
+}
+.latestPost__text {
+  margin-left: 65px;
+  width: 469px;
+}
+.latestPost__subcontainer {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.latestPost__textSubcontainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.latestPost__h3 {
+  text-align: left;
+  margin-top: 22px;
+}
+
+.numerator {
+  display: flex;
+  justify-content: center;
+  margin-top: 51px;
+  margin-bottom: 139px;
+  gap: 20px;
+}
+.numerator__Subcontainer {
+  position: relative;
+}
+.numerator__span {
+  position: absolute;
+  top: 18px;
+  left: 18px;
 }/*# sourceMappingURL=style.css.map */
