Урок 6. Семинар: Компоненты

--- a/HW_200/css/modules/_mixin.scss
+++ b/HW_200/css/modules/_mixin.scss
@@ -18,7 +18,7 @@
 }
 
 @mixin top-title() {
-    color: #292F36;
+    color: #296ab5;
     font-family: DM Serif Display;
     font-size: 65px;
     font-style: normal;
