--- a/HW_200/css/style.css
+++ b/HW_200/css/style.css
@@ -93,7 +93,7 @@
   padding-top: 212px;
 }
 .top__title {
-  color: #292F36;
+  color: #296ab5;
   font-family: DM Serif Display;
   font-size: 65px;
   font-style: normal;
@@ -427,6 +427,16 @@
   background-position: center;
   height: 356px;
 }
+.blog__topdetails {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end; */
+  background-image: url("../img/Blog_details_Banner.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 356px;
+}
 .blog__topTitle {
   display: flex;
   flex-direction: column;
@@ -435,6 +445,42 @@
   padding: 41px 78px;
   border-radius: 37px 37px 0px 0px;
   background: #FFF;
+}
+.blog__details {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 200px;
+}
+.blog__content {
+  width: 799px;
+}
+.blog__tags {
+  width: 345px;
+  margin-left: 52px;
+}
+.blog__articleDateCrumbs {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 46px;
+}
+.blog__articleText {
+  color: #4D5053;
+  font-family: Jost;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0.22px;
+  margin-top: 48px;
+}
+.blog__articleImg {
+  margin-top: 11px;
+  width: 790px;
+  height: 365px;
+}
+.blog__articleTextImg {
+  margin-top: 35px;
 }
 
 .latestPost {
@@ -494,4 +540,21 @@
   position: absolute;
   top: 18px;
   left: 18px;
+}
+
+.tag__batton {
+  padding: 9px 30px;
+  border-radius: 10px;
+  background: #F4F0EC;
+}
+.tag__buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 24px;
+}
+
+.batton_bacground {
+  background-color: #292F36;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
